Att nas descrições

--- a/index.html
+++ b/index.html
@@ -22,16 +22,20 @@
         <ul>
             <li><a href="#inicio"><i class="fa-solid fa-person-rifle" style="color: #ffffff;"></i> Sobre mim</a></li>
 
-            <li><a href="#cronograma"><i class="fa-solid fa-calendar-days" style="color: #ffffff;"></i> Cronograma</a></li>
+            <li><a href="#cronograma"><i class="fa-solid fa-calendar-days" style="color: #ffffff;"></i> Cronograma</a>
+            </li>
 
             <li><a href="#matematica"><i class="fa-solid fa-calculator" style="color: #ffffff;"></i> Matemática</a></li>
 
-            <li><a href="#historia"><i class="fa-solid fa-earth-americas" style="color: #ffffff;"></i> Ciências Humanas</a></li>
+            <li><a href="#historia"><i class="fa-solid fa-earth-americas" style="color: #ffffff;"></i> Ciências
+                    Humanas</a></li>
 
-            <li><a href="#ciencias"><i class="fa-solid fa-tree" style="color: #ffffff;"></i> Ciências da Natureza</a></li>
+            <li><a href="#ciencias"><i class="fa-solid fa-tree" style="color: #ffffff;"></i> Ciências da Natureza</a>
+            </li>
 
-            <li><a href="#linguagens"><i class="fa-solid fa-book-bookmark" style="color: #ffffff;"></i> Linguagens</a></li>
-            
+            <li><a href="#linguagens"><i class="fa-solid fa-book-bookmark" style="color: #ffffff;"></i> Linguagens</a>
+            </li>
+
             <li><a href="#tecnico"><i class="fa-solid fa-code" style="color: #ffffff;"></i> Técnico</a></li>
             <br>
 
@@ -43,48 +47,57 @@
     <main>
         <section id="inicio">
             <h2>Quem sou eu?</h2>
-            <p>palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras</p>
+            <p>Olá a todos, meu nome é Emilio Freitas e estou atualmente cursando o ensino médio técnico em
+                Desenvolvimento de Sistemas.
+
+                No ensino médio, tenho me dedicado ao aprendizado de habilidades e conhecimentos relacionados à área de
+                tecnologia da informação e programação. Estou entusiasmado em aprofundar meu entendimento de
+                desenvolvimento de sistemas e as possibilidades emocionantes que essa área oferece.
+
+                Estou ansioso para crescer como estudante e profissional, explorando as diversas facetas do
+                desenvolvimento de sistemas e contribuindo para soluções inovadoras no mundo da tecnologia.</p>
             <img class="imgs" src="/img/freitaaas.PNG">
         </section>
 
         <section id="cronograma">
             <h2>Rotina de estudos</h2>
-            <p>palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras</p>
+            <p>Nesta seção, você encontrará informações sobre a minha rotina de estudos ao longo do ano.</p>
         </section>
 
         <section id="matematica">
             <h2>Matemática</h2>
-            <p>palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras</p>
-            <a href="##"><a href="##"><img class="imgs" src="/img/mtm.jpg"></a></a>
+            <p>Nesta seção, compartilharei meu progresso e recursos relacionados ao estudo da matemática.</p>
+            <a href="##"><img class="imgs" src="/img/mtm.jpg"></a>
         </section>
 
         <section id="historia">
             <h2>Ciências Humanas</h2>
-            <p>palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras</p>
-            <a href="##"><img class="imgs" src="/img/humanas.jpeg"></a>
+            <p>Explore aqui materiais e links relacionados ao estudo de Ciências Humanas, como História e Geografia.</p>
+            <a href="https://docs.google.com/document/d/1MTBu0y-6etKldEdF8Y8-BYYktQtJAvfnSHXF-f5ad18/edit?usp=sharing"><img
+                    class="imgs" src="/img/humanas.jpeg"></a>
         </section>
 
         <section id="ciencias">
             <h2>Ciências da Natureza</h2>
-            <p>palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras</p>
+            <p>Descubra recursos e informações sobre Ciências da Natureza, como Física, Química e Biologia.</p>
             <a href="##"><img class="imgs" src="/img/natureza.jpg"></a>
         </section>
 
         <section id="linguagens">
             <h2>Linguagens</h2>
-            <p>palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras</p>
-            <a href="##"><img class="imgs" src="/img/linguagens.jpg"></a>
+            <p>Nesta seção, abordarei o estudo de linguagens, como Língua Portugues</p>
+                <a href="##"><img class="imgs" src="/img/linguagens.jpg"></a>
         </section>
 
         <section id="tecnico">
             <h2>Desenvolvimento de Sistemas</h2>
-            <p>palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras</p>
+            <p>Nesta seção, abordarei os estudos técnicos, como Desenvolvimento de Sistemas</p>
             <a href="##"><img class="imgs" src="/img/dev.png"></a>
         </section>
 
         <section id="edoa">
             <h2>Escolha do aluno</h2>
-            <p>palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras palavras e letras</p>
+            <p>Nesta seção, abordarei os estudos feitos ao longo do ano, porém da escolha do aluno</p>
             <a href="##"><img class="imgs" src="/img/cores-suaves-uma-ilustracao-de-um-quarto_670382-119912.avif"></a>
         </section>
     </main>
@@ -94,7 +107,7 @@
         <a class="circle-a" href="#link2"><i class="fa-solid fa-folder-open" style="color: #ffffff;"></i></a>
         <a class="circle-a" href="#link3"><i class="fa-solid fa-file-arrow-down" style="color: #ffffff;"></i></a>
     </div>
-    
+
 
     <script src="/js/script.js"></script>
 </body>
