Correção dos links

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <section id="matematica">
             <h2>Matemática</h2>
             <p>Nesta seção, compartilharei meu progresso e recursos relacionados ao estudo da matemática.</p>
-            <a href="##"><img class="imgs" src="/img/mtm.jpg"></a>
+            <a href="https://docs.google.com/document/d/1fTquX5jHPR3O4j8L-7N1TnNgr2BNIHanraCZ0VtpXGw/edit?usp=sharing"><img class="imgs" src="/img/mtm.jpg"></a>
         </section>
 
         <section id="historia">
@@ -80,19 +80,19 @@
         <section id="ciencias">
             <h2>Ciências da Natureza</h2>
             <p>Descubra recursos e informações sobre Ciências da Natureza, como Física, Química e Biologia.</p>
-            <a href="##"><img class="imgs" src="/img/natureza.jpg"></a>
+            <a href="https://docs.google.com/document/d/17Il_rrd-JgW2keheqOqPoaoVlroW4ldt2GgiCYW74zQ/edit?usp=sharing"><img class="imgs" src="/img/natureza.jpg"></a>
         </section>
 
         <section id="linguagens">
             <h2>Linguagens</h2>
             <p>Nesta seção, abordarei o estudo de linguagens, como Língua Portugues</p>
-                <a href="##"><img class="imgs" src="/img/linguagens.jpg"></a>
+                <a href="https://docs.google.com/document/d/10-BWJoCQLDlfOkI5YnTPhV2YlraF5Yu6OxQUk9p9hKo/edit?usp=sharing"><img class="imgs" src="/img/linguagens.jpg"></a>
         </section>
 
         <section id="tecnico">
             <h2>Desenvolvimento de Sistemas</h2>
             <p>Nesta seção, abordarei os estudos técnicos, como Desenvolvimento de Sistemas</p>
-            <a href="##"><img class="imgs" src="/img/dev.png"></a>
+            <a href="https://docs.google.com/document/d/1wHZQgw6Nsm2kvNIRITqeiTsK6u_x1W_yOQbmc-YEuqQ/edit?usp=sharing"><img class="imgs" src="/img/dev.png"></a>
         </section>
 
         <section id="edoa">
