--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
         </section>
 
         <section id="cronograma">
-            <h2>Rotina de estudos</h2>
-            <p>Nesta seção, você encontrará informações sobre a minha rotina de estudos ao longo do ano.</p>
+            <img class="imgs" src="./img/crono2f.png" >
         </section>
 
         <section id="matematica">
