--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <li><a href="#tecnico"><i class="fa-solid fa-code" style="color: #ffffff;"></i> Técnico</a></li>
             <br>
 
-            <li><a href="#edoa"><i class="fa-solid fa-graduation-cap" style="color: #ffffff;"></i> Escolha do
-                    aluno</a></li>
+            <!-- <li><a href="#edoa"><i class="fa-solid fa-graduation-cap" style="color: #ffffff;"></i> Escolha do
+                    aluno</a></li> -->
         </ul>
     </nav>
 
@@ -94,17 +94,17 @@
             <a href="https://docs.google.com/document/d/1wHZQgw6Nsm2kvNIRITqeiTsK6u_x1W_yOQbmc-YEuqQ/edit?usp=sharing"><img class="imgs" src="/img/dev.png"></a>
         </section>
 
-        <section id="edoa">
+        <!-- <section id="edoa">
             <h2>Escolha do aluno</h2>
             <p>Nesta seção, abordarei os estudos feitos ao longo do ano, porém da escolha do aluno</p>
             <a href="##"><img class="imgs" src="/img/cores-suaves-uma-ilustracao-de-um-quarto_670382-119912.avif"></a>
-        </section>
+        </section> -->
     </main>
 
     <div id="a-container">
-        <a class="circle-a" href="#link1"><i class="fa-solid fa-folder-open" style="color: #ffffff;"></i></a>
-        <a class="circle-a" href="#link2"><i class="fa-solid fa-folder-open" style="color: #ffffff;"></i></a>
-        <a class="circle-a" href="#link3"><i class="fa-solid fa-file-arrow-down" style="color: #ffffff;"></i></a>
+        <a class="circle-a" href="https://drive.google.com/file/d/1V4jaQgiaj5qOLXmqWKNM6IwuQyMS2ao2/view?usp=sharing "><i class="fa-solid fa-folder-open" style="color: #ffffff;"></i></a>
+        <a class="circle-a" href="https://sites.google.com/estudante.sesisenai.org.br/2fportfolio2022/p%C3%A1gina-inicial"><i class="fa-solid fa-folder-open" style="color: #ffffff;"></i></a>
+        <!-- <a class="circle-a" href="#link3"><i class="fa-solid fa-file-arrow-down" style="color: #ffffff;"></i></a> -->
     </div>
 
 
