--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
     <div id="a-container">
         <a class="circle-a" href="https://drive.google.com/file/d/1V4jaQgiaj5qOLXmqWKNM6IwuQyMS2ao2/view?usp=sharing "><i class="fa-solid fa-folder-open" style="color: #ffffff;"></i></a>
         <a class="circle-a" href="https://sites.google.com/estudante.sesisenai.org.br/2fportfolio2022/p%C3%A1gina-inicial"><i class="fa-solid fa-folder-open" style="color: #ffffff;"></i></a>
-        <!-- <a class="circle-a" href="#link3"><i class="fa-solid fa-file-arrow-down" style="color: #ffffff;"></i></a> -->
+        <a class="circle-a" href="https://www.linkedin.com/in/emiliodfreitas/"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a>
+        <a class="circle-a" href="https://github.com/ffreitas22"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
     </div>
 
 
